# discordbot

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  Readme.md  build.rs  docker-compose.yml  dockerfile  dockerfile.prod
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: README.md  release.yml  rust tests.yml  rust.yml
assets/: CodenameData.json
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/src/lib/: types.ts
frontend/src/routes/: +page.svelte  botfeed.svelte  feeditem.svelte  layout.css
src/: commands.rs  lib.rs  logger.rs  main.rs  util.rs  web.rs  websocket.rs
tests/: codename_data_tests.rs  commands_tests.rs  db_tests.rs  lib_tests.rs
